# PSoC6_Playground

./: .gitignore  .gitmodules  LICENSE  README.md  docker-bake.hcl
First_Project/: CMakeLists.txt
First_Project/app/: common.h  debug_console.c  debug_console.h  main.c  usb_device.c  usb_device.h
First_Project/app/config_modified/: cycfg_peripherals.c  cycfg_pins.c
First_Project/bsps/TARGET_APP_CY8CKIT-062S2-AI/COMPONENT_CM4/TOOLCHAIN_GCC_ARM/: linker.ld
First_Project/bsps/TARGET_APP_CY8CKIT-062S2-AI/config/: design.modus
First_Project/bsps/TARGET_APP_CY8CKIT-062S2-AI/config/GeneratedSource/: cycfg.c  cycfg.h  cycfg_clocks.c  cycfg_clocks.h  cycfg_connectivity_bt.h  cycfg_dmas.c  cycfg_dmas.h  cycfg_notices.h  cycfg_peripherals.c  cycfg_peripherals.h  cycfg_pins.c  cycfg_pins.h  cycfg_qspi_memslot.h  cycfg_routing.c  cycfg_routing.h  cycfg_system.c  cycfg_system.h
First_Project/imports/emusb-device/Config/: usbd_config_io.c
First_Project/imports/emusb-device/Config/COMPONENT_CAT1A/: usbd_config.c
Radar/: .gitignore  CMakeLists.txt  README.md
Radar/app/: common.h  debug_console.c  usb_device.c  usb_device.h
Radar/bsps/TARGET_APP_CY8CKIT-062S2-AI/: cybsp.h
Radar/bsps/TARGET_APP_CY8CKIT-062S2-AI/config/: design.modus
Radar/bsps/TARGET_APP_CY8CKIT-062S2-AI/config/GeneratedSource/: cycfg.timestamp  qspi_config.cfg
Radar/imports/emusb-device/Config/COMPONENT_CAT1A/: usbd_config.c
ThreadX_USB/: .clang-format  CMakeLists.txt  README.md
ThreadX_USB/app/: debug_console.h  main.c
ThreadX_USB/bsps/TARGET_APP_CY8CKIT-062S2-AI/config/GeneratedSource/: cycfg_clocks.c  cycfg_clocks.h  cycfg_connectivity_bt.c  cycfg_qspi_memslot.c  cycfg_routing.h  cycfg_system.c  cycfg_system.h
ThreadX_USB/imports/emusb-device/Config/: usbd_config_io.c
docker/: Dockerfile.first_project  Dockerfile.radar  Dockerfile.tx_usb
mtb_shared/cat1cm0p/release-v1.7.0/: README.md  RELEASE.md  version.xml
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1A/COMPONENT_CM0P_BLESS/: psoc6_cm0p_bless.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1A/COMPONENT_CM0P_BLESS_OTA/: psoc6_cm0p_bless_ota.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1A/COMPONENT_CM0P_CRYPTO/: psoc6_01_cm0p_crypto.c  psoc6_02_cm0p_crypto.c  psoc6_03_cm0p_crypto.c  psoc6_04_cm0p_crypto.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1A/COMPONENT_CM0P_SECURE/: psoc6_01_cm0p_secure.c  psoc6_01_cm0p_secure.hex  psoc6_02_cm0p_secure.c  psoc6_02_cm0p_secure.hex  psoc6_03_cm0p_secure.c  psoc6_03_cm0p_secure.hex
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1A/COMPONENT_CM0P_SLEEP/: psoc6_01_cm0p_sleep.c  psoc6_02_cm0p_sleep.c  psoc6_03_cm0p_sleep.c  psoc6_04_cm0p_sleep.c  tviibe1m_cm0p_sleep.c  tviibe2m_cm0p_sleep.c  tviibe4m_cm0p_sleep.c  tviibe512k_cm0p_sleep.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1C/: mtb_cat1cm0p.h
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1C/COMPONENT_CM0P_SLEEP/: README.md  tviic2d6m_cm0p_sleep.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1C/COMPONENT_DUAL_CM0P_SLEEP/: tviic2d6m_dual_cm0p_sleep.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1C/COMPONENT_XMC7xDUAL_CM0P_SLEEP/: xmc7100d_cm0p_sleep.c  xmc7200d_cm0p_sleep.c
mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1C/COMPONENT_XMC7x_CM0P_SLEEP/: xmc7100_cm0p_sleep.c  xmc7200_cm0p_sleep.c
mtb_shared/cmsis/release-v5.8.1/: version.xml
mtb_shared/mtb-hal-cat1/release-v2.6.1/source/: cyhal_lptimer.c
mtb_shared/retarget-io/release-v1.6.0/include/: cy_retarget_io.h
